Migrate demoted system apps
Create a self-disabling boot receiver that installs demoted system apps

Change-Id: I9943088db95d4f4d5ae67a82712e8627b5e855bb

--- a/packages/LineageSettingsProvider/res/values/strings.xml
+++ b/packages/LineageSettingsProvider/res/values/strings.xml
@@ -16,4 +16,6 @@
 -->
 <resources>
     <string name="app_name">Lineage Settings Storage</string>
+
+    <string name="calyx_fdroid_repo_location" translatable="false">/product/fdroid/repo</string>
 </resources>
